--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.0.6",
-    "jsdom": "^16.7.0",
     "prettier": "2.3.2",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "jsdom": "^17.0.0"
   }
 }
