publish コメント作成

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "yarn install && yarn test && yarn build && npm publish"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
